eliminated 'should' in 7.1

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1676,23 +1676,23 @@ However, DOL cannot be used for writing new basic OMSs.}
 
 \todonote{add ref to annex K}
 
-\section{DOL requirements}\label{c:req:overview}
+\section{Overview of DOL}\label{c:req:overview}
 
-DOL has been designed and developed with several requirements in mind, all arising from its intended role of enabling OMS interoperability. The use of ``{\should}'' in the rest of clause 5 indicates a desired goal but is not required of DOL (in accordance with Annex H of ISO/IEC Directives -- Part 2).
+DOL is a lnaguage enabling OMS interoperability. 
 
 \CLnote[type=todo]{give quick overview here.  Create clause 5.2 for requirements, and 5.3 for design overview. TM: done}
 
 \subsection{DOL is free, generally applicable, open, and extensible.}\label{c:req:extensible}
 
-DOL \should be
+DOL is
 \begin{description}
-\item[free] This \IS \should be freely available for unrestricted use.
-\item[generally applicable] It \should neither be restricted to OMSs in a specific domain, nor to foundational OMSs, nor to OMSs represented in a specific OMS language, nor to OMSs stored in any specific repositories.
-\item[open] It \should support mapping, integrating, and annotating OMSs across arbitrary internet locations.  It \should make use of existing open standards wherever suitable.  The criteria for extending DOL (see next item) \should be transparent and explicit.
-\item[extensible] It \should provide a framework into which any existing, and, desirably, any future OMS language can be plugged.
+\item[free] DOL is freely available for unrestricted use.
+\item[generally applicable] DOL is neither be restricted to OMSs in a specific domain, nor to foundational OMSs, nor to OMSs represented in a specific OMS language, nor to OMSs stored in any specific repositories.
+\item[open] DOL supports mapping, integrating, and annotating OMSs across arbitrary internet locations.  It makes use of existing open standards wherever suitable.  The criteria for extending DOL (see next item) are transparent and explicit.
+\item[extensible] DOL provides a framework into which any existing, and, desirably, any future OMS language can be plugged.
 \end{description}
 
-DOL \shall be applicable to any OMS language that has a formal, logic-based semantics or a semantics defined by translation to another OMS language with such a formal semantics. The annotation framework of DOL \should additionally be applicable to the non-logical constructs of such languages. This \IS \todonote[author=Christoph Lange,date=D:201109221211+02'00',type=fyi]{We can afford to say ``shall'' here, as these criteria are really something that we can fully provide} \shall specify formal criteria for establishing the conformance of an OMS language with DOL.  Annexes \shall establish the conformance of a number of relevant OMS languages with DOL; a registry shall offer the possibility to add further (also non-standardized) languages:\CLnote[date=D:201201100956+01'00']{John Sowa: Make it modular with a simple core that can run efficiently on small systems, but can grow indefinitely to support as much as anyone could desire.}
+DOL is applicable to any OMS language that has a formal, logic-based semantics or a semantics defined by translation to another OMS language with such a formal semantics. The annotation framework of DOL is additionally be applicable to the non-logical constructs of such languages. This \IS specifies formal criteria for establishing the conformance of an OMS language with DOL.  Annexes establish the conformance of a number of relevant OMS languages with DOL; a registry shall offer the possibility to add further (also non-standardized) languages:\CLnote[date=D:201201100956+01'00']{John Sowa: Make it modular with a simple core that can run efficiently on small systems, but can grow indefinitely to support as much as anyone could desire.}
 
 \begin{description}
 \item[normative] OWL, Common Logic, RDFS\todonote[author=Christoph Lange,date=D:201111021905+01'00']{RIF as well?  See \ticket{16}}
@@ -1703,50 +1703,39 @@ DOL \shall be applicable to any OMS language that has a formal, logic-based sema
 
 \CLnote{here and elsewhere: remove ``shall'' from section headers}
 
-DOL \shall provide syntactic constructs for structuring OMSs regardless of the logic their sentences are formalized in. DOL \should provide syntactic constructs for
+DOL provides syntactic constructs for structuring OMSs regardless of the logic their sentences are formalized in. DOL provides syntactic constructs for
 
 \begin{itemize}
 \item basic and structured OMSs (and facilities to identify them in a globally unique way),
 \item explicit extraction of modules from existing OMSs, \markupcomment[author=Christoph Lange,type=q-aut]{such that, \eg, changes in the OMS can be propagated to the extracted module}{This rather sounds like a use case description to me than like a requirement.  Move it somewhere else?  Where?}.
 \item mappings between OMSs (\cf \cref{c:req:links}), including interpretations, relations between OMSs and their modules, as well as alignments.
 \end{itemize}
-DOL \shallnot provide its own constructs for expressing sentences.  Instead, it \shall \textit{inherit} the logical language aspects of conforming OMS languages.  It \should be possible to literally include sentences expressed in such OMS languages in a DOL OMS.
+DOL does provide its own constructs for expressing sentences.  Instead, it \textit{inherits} the logical language aspects of conforming OMS languages.  It is possible to literally include sentences expressed in such OMS languages in a DOL OMS.
 
-DOL \shall provide an initial set of built-in approximation methods and module extraction selectors.  Additionally, it \shall provide a means of referring to approximation methods and module extraction selectors defined externally of this \IS.\todonote[author=Christoph Lange,date=D:201111030047+01'00',type=fyi]{In practice we will use IRIs for that purpose.}
+DOL provides an initial set of built-in approximation methods and module extraction selectors.  Additionally, it provides a means of referring to approximation methods and module extraction selectors defined externally of this \IS.\todonote[author=Christoph Lange,date=D:201111030047+01'00',type=fyi]{In practice we will use IRIs for that purpose.}
 
-DOL \shall provide an initial vocabulary for expressing relations in correspondences (as part of alignments between OMSs).  Additionally, it \shall provide a means of reusing relation types defined externally of this \IS.
+DOL provides an initial vocabulary for expressing relations in correspondences (as part of alignments between OMSs).  Additionally, it provides a means of reusing relation types defined externally of this \IS.
 
-DOL \shallnot provide an annotation vocabulary, i.e.\ it \shall neither provide annotation properties nor datatypes to be used with literal annotation objects. Instead, an informative annex \shall recommend existing annotation vocabularies for use with DOL.
+DOL does not provide an annotation vocabulary, i.e.\ it neither provides annotation properties nor datatypes to be used with literal annotation objects. Instead, an informative annex recommends existing annotation vocabularies for use with DOL.
 
 \subsection{DOL has user- and machine-readable serializations.}
 
-\CLnote[type=q-all]{We need to revise this following the agreement to drop the XML and RDF serializations.}In the interest of wide applicability and tool support, DOL \should support multiple alternative serializations.  In particular, there \should be a text serialization targeting human readers and writers, as well as serializations optimized for machine processability.
+\CLnote[type=q-all]{We need to revise this following the agreement to drop the XML and RDF serializations.}In the interest of wide applicability and tool support, DOL  supports multiple alternative serializations.  In particular, is a text serialization targeting human readers and writers, as well as serializations optimized for machine processability.
 
-This \IS \shall specify criteria for a serialization to conform with DOL, and it \shall specify the following conforming serializations:
+The \textbf{text serialization} in particular offers a syntax for abbreviating identifiers of resources within OMSs in a way that does not require authors to write down their full global identifiers.
 
-\begin{itemize}
-\item a human-readable \textbf{text serialization}
-\item a machine-processable \textbf{interchange format}, to be implemented as
-  \begin{description}
-  \item[an XML schema (DOL XML)] particularly targeting document or form based authoring, validation, as well as translation from and to serializations of existing OMS languages\todonote[author=Christoph Lange,date=D:201204050853+02'00',type=q-all]{I think it's reasonable to call this ``DOL XML'' instead of ``DIF XML'', as to emphasize the ``brand'' DOL}, and
-  \item[an RDF vocabulary (DOL RDF)] particularly targeting interlinking and annotation.
-  \end{description}
-\end{itemize}
+An OMS implemented in DOL can comprise parts formalized in any OMS language; any serialization of DOL can literally include such parts, regardless of the OMS language serialization they have been written in. \todonote[author=Christoph Lange,date=D:201109200256+02'00',type=fyi]{advanced namespacing is the solution that addresses this requirement} Additionally, an OMS implemented in DOL can refer to any external OMSs formalized in any OMS language, as long as they can be identified in a globally unique way.
 
-The \textbf{text serialization} in particular \shall offer a syntax for abbreviating identifiers of resources within OMSs in a way that does not require authors to write down their full global identifiers.
-
-An OMS implemented in DOL \should be able to comprise parts formalized in any OMS language; any serialization of DOL \should be able to literally include such parts, regardless of the OMS language serialization they have been written in. \todonote[author=Christoph Lange,date=D:201109200256+02'00',type=fyi]{advanced namespacing is the solution that addresses this requirement} Additionally, an OMS implemented in DOL \should be able to refer to any external OMSs formalized in any OMS language, as long as they can be identified in a globally unique way.
-
-Existing OMSs in existing XML serializations (\eg XCL) or text serializations (\eg OWL Manchester Syntax) \should validate as DOL OMSs with a minimum amount of syntactic adaptation. Existing OMS files/documents \should be usable in a DOL context without the need for modification.
+Existing OMSs in existing XML serializations (\eg XCL) or text serializations (\eg OWL Manchester Syntax) validate as DOL OMSs with a minimum amount of syntactic adaptation. Existing OMS files/documents are usable in a DOL context without the need for modification.
 
 \subsection{DOL has a well-defined formal, logic-based semantics.}\label{c:req:semantics}
 
-The structural elements and structural mappings of DOL \should have a formal, logic-based semantics.
+The structural elements and structural mappings of DOL have a formal, logic-based semantics.
 
 This \IS specifies OMS language translations between conforming languages:\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{we shall establish the conformance of an initial set of languages with DOL. As a part of that work we deliver the "onto-logical translation graph" between these languages. Anyone, who wants to establish the conformance of another language with DOL, has to add a node to the graph, and at least one edge from/to an existing node.}
 
 \begin{itemize}
-\item OMS language translations between their logical language aspects. For any such OMS language translation its properties \should be determined, \eg whether it is a sublogic, a theoroidal translation, etc. \\
+\item OMS language translations between their logical language aspects. For any such OMS language translation its properties are determined, \eg whether it is a sublogic, a theoroidal translation, etc. \\
 ~\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=todo]{meet the requirements of people who combine OWL reasoners with Prolog. Some additional research needed on combining logics that have a model theory with those that don't}
 \item OMS language translations between their structuring language aspects and the structuring language aspect of DOL.
 \end{itemize}
@@ -1761,6 +1750,7 @@ one}
 \label{f:DOL-translations}
 \end{figure}
 
+\ednote{reformulate this, see RFP}
 For each pair $L_1$ and $L_2$ of OMS languages, OMS language translations $T_1$ and $T_2$ into a common target OMS language $L_T$ \should be specified. (If $L_T$ does not exist, the only way to express a heterogeneous OMS involving $L_1$ and $L_2$ may be to keep the DOL expression and the individual OMSs in $L_1$ and $L_2$.)  These \should be translations into an OMS language that is more expressive than both $L_1$ and $L_2$, such that the union of the images of the translations is a subset of the target OMS language ($T_1(L_1)\cup T_2(L_2)\subseteq L_T$).  \fref{f:DOL-translations} outlines such an example, where Common Logic serves as the common target for OWL and RDFS, as it is more expressive than either of them.\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{In the context of that, specify when a document/an OMS conforms with DOL.}  If such a target OMS language or suitable translations do not yet exist, translations into a less expressive language may be specified as an alternative, such that the intersection of the images of the translations forms a subset of the target language ($T_1(L_1)\cap T_2(L_2)\subseteq L_T$), which \should be as large as possible.  For example, an OMS language that is more expressive than both Common Logic and F-Logic does not yet exist; therefore, it would be possible to specify translations into the first-order logic subset of either OMS language.
 
 
