--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -374,4 +374,18 @@ ZimmerEuze06,
   publisher = {SCITEPRESS},
 }
 
+@inproceedings{DBLP:conf/ijcai/LutzW11,
+  author    = {Carsten Lutz and
+               Frank Wolter},
+  title     = {Foundations for Uniform Interpolation and Forgetting in
+               Expressive Description Logics},
+  booktitle = {IJCAI},
+  year      = {2011},
+  pages     = {989-995},
+  ee        = {http://ijcai.org/papers11/Papers/IJCAI11-170.pdf},
+  editor    = {Toby Walsh},
+  publisher = {IJCAI/AAAI},
+  year      = {2011},
+  isbn      = {978-1-57735-516-8},
+}
 
