--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -720,31 +720,24 @@ Proposals \nitem{RFP}.
 
 
 \section{Background Information}
-Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) \textbf{O}ntologies formalizing domain knowledge, 2) formal \textbf{M}odels of systems, and 3) the formal \textbf{S}pecification of systems. Ontologies, models  and specifications will (for the purpose of this document) henceforth be abbreviated as \textbf{OMS}, if all three can be treated in the same way.
+Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) \textbf{O}ntologies formalizing domain knowledge, 2) (formal) \textbf{M}odels of systems, and 3) the formal \textbf{S}pecification of systems. Ontologies, models  and specifications will (for the purpose of this document) henceforth be abbreviated as \textbf{OMS}, if all three can be treated in the same way.
 
+OMS provide formal descriptions the scope of which ranges from domain
+knowledge and activities (ontologies, models) to properties and
+behaviours of hardware and software systems (models, specifications).
+These formal descriptions can be used for the analysis and
+verification of both domain models, system models and systems, using
+rigorous and effective reasoning tools.  Since these models and
+systems become increasingly complex, usually a monolithic description
+is not feasible. Instead, different viewpoints on one domain or
+systems are modeled.  Hence, interoperability becomes a crucial issue,
+in particular, formal interoperability, i.e.\ interoperability that is
+based on the formal semantics of the different viewpoints.
+Interoperability is both about interfacibility, enabling the use of
+several OMS in a common application scenario, as well as about
+coherence and consistency, ensuring at an early stage of the
+development that a coherent system can be reached.
 
-An OMS is a formal description of the concepts and relationships
-that are of interest to an agent or a community of agents. Today,
-OMS are applied in eBusiness, eHealth, eGovernment, eInclusion,
-eLearning, smart environments, ambient assisted living (AAL), and
-virtually all other information-rich endeavours. Ontologies have been
-used initially and principally for data and database integration
-through providing a common representation of the subject domain onto
-which the data sources can be mapped meaningfully. Over the years, the
-purpose has broadened beyond data and services interoperability to
-include a wide range of tasks and ontologies are used in information
-systems at run-time, such as being a component in \emph{in silico}
-scientific workflows, used for natural language processing, in
-ontology-driven querying of digital libraries, user profiling in
-recommender systems, adaptive e-Learning tools, and
-more.}\todonote[author=Terry
-Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
-  Interoperability in this context seems to be mutual consistency?
-  Fostering Mutual Consistency among disjoint ontological formalisms
-  (intensions) and their realisations (extensions). TM: yes, but more
-  than that: also interfacability, such that the joint use in a common
-  application scenario is enabled.}
-  \todonote{Include a sentence each about models and specifications}
 
  In complex applications, which involve multiple OMSs with overlapping concept spaces, data mapping is also required on a higher level of abstraction, viz.\ between different OMSs, and is then called OMS alignment. 
   While OMS alignment is most commonly studied for OMSs formalized\CLnote{spell-check everything for British. TM: why British? OMG is an American organization.} in the same OMS language, the different OMSs used by complex applications may also be written in different OMS languages. 
